Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjUndefinedRetBoolean.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, undefined> yoda
        undefined y = yoda:useForce(true, true)
        output "passed"
     end
end
