Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriUndefinedRetBooleanFail.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, undefined> yoda
        boolean y = yoda(true, true, true)
     end
end
